# hotdog

./: .gitignore  Cargo.toml  README.adoc  docker-compose.yml  hotdog-loadtest.yml  hotdog.yml  tsung.xml
.github/workflows/: release.yml  rust.yml
contrib/: README.adoc  cert-key.pem  cert.pem  pkcs8-key.pem
contrib/rsyslog/: README.adoc  rsyslog.conf  run.sh
examples/simple-plaintext/: hotdog.yml
scripts/: generate-stdout.rb
src/: connection.rs  errors.rs  json.rs  kafka.rs  main.rs  merge.rs  parse.rs  rules.rs  serve.rs  serve_plain.rs  serve_tls.rs  settings.rs  status.rs
test/configs/: single-rule-with-hostname-field.yml  single-rule-with-invalid-jmespath.yml  single-rule-with-merge.yml  single-rule-with-replace.yml
