[package]
name = "hotdog"
version = "0.1.8"
authors = ["R. Tyler Croy <rtyler+hotdog@brokenco.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Base asynchronous runtime
async-std = "~1.5.0"
futures = { version = "~0.3.4", features = ["thread-pool"] }

# For parsing the syslog formatted messages
syslog_rfc5424 = "~0.6.1"

# Needed for listening for TLS connections
async-tls = "~0.7.0"
rustls = "~0.17.0"

# Requiredfor communciating with across internal queues
crossbeam = "~0.7"

# Needed for forwarding messages along to Kafka
# including the SSL and SASL features to ensure that this can authenticate
# against secure Kafka clusters, e.g. AWS MSK
rdkafka = { version = "~0.23.1", features = ["ssl", "sasl"]}

# Handling command line options
clap = { version = "~2.33.0", features = ["yaml"] }
# Handling configuration overlays
config = { version = "~0.10.1", features = ["yaml"] }

# Logging
log = "~0.4.8"
pretty_env_logger = "~0.3.1"

# Needed for deserializing JSON messages _and_ managing our configuration
# effectively
serde = { version = "~1.0.106", features = ["rc"] }
serde_derive = "~1.0.106"
serde_json = "~1.0.0"
# Helpful to deserialize our regular expressions directly from the
# configuration file
serde_regex = "~0.4.0"

# Used for rule matching
regex = "~1.3.6"

# used for rule matching on JSON
jmespath = { git = "https://github.com/jmespath/jmespath.rs" }

# Needed to report metrics of hotdog's performance
dipstick = "~0.7.12"

# Used for string replacements and other template based transformations
handlebars = "~3.0.1"

# Needed for time management
chrono = "~0.4.11"
