[package]
name = "hotdog"
version = "0.5.0"
authors = ["R. Tyler Croy <rtyler+hotdog@brokenco.de>"]
edition = "2018"

[features]
default = []
simd = ["simd-json"]

[dependencies]
# Base asynchronous runtime
async-std = { version = "1", features = ["attributes"] }
async-channel = "1"
async-trait = "0"
futures = { version = "0.3", features = ["thread-pool"] }

# Needed for listening for TLS connections
async-tls = "0"
rustls = "0"

# Handling command line options
clap = { version = "2", features = ["yaml"] }
# Needed for time management
chrono = "0"
# Handling configuration overlays
config = { version = "0", features = ["yaml"] }
dashmap = "3"
# Needed to report metrics of hotdog's performance
dipstick = "0"
# Used for string replacements and other template based transformations
handlebars = "3"
# used for rule matching on JSON
#  The "sync" feature is undocumented but required in order to swap Rc for Arc
#  in the crate, allowing it to be used with futures and threads properly
jmespath = { git = "https://github.com/jmespath/jmespath.rs", features = ["sync"] }
# Logging
log = "0"
# Faster locking primitives
parking_lot = "0"
pretty_env_logger = "0"

# Needed for forwarding messages along to Kafka
# including the SSL and SASL features to ensure that this can authenticate
# against secure Kafka clusters, e.g. AWS MSK
rdkafka = { version = "0", features = ["ssl-vendored", "sasl"]}
# Used for rule matching
regex = "1"

# Needed for deserializing JSON messages _and_ managing our configuration
# effectively
serde = { version = "1", features = ["rc"] }
serde_derive = "1"
serde_json = "1"
# Helpful to deserialize our regular expressions directly from the
# configuration file
serde_regex = "0"

simd-json = { version = "0", optional = true}

smol = "1"
# Needed to do clever enum/derive tricks for strings
strum = "0"
strum_macros = "0"

# For parsing the syslog formatted messages
syslog_rfc5424 = "0"
syslog_loose = "0"

# Needed for the http-based health checks
tide = "0"

# Needed to tag rules and actions with their own unique identifiers
uuid = { version = "0", features = ["v4"] }

# Optimize the heck out of the release build, I have no idea what these flags
# do
[profile.release]
panic = "abort"
lto = true
codegen-units=1
opt-level="s"
